--- a/index.html
+++ b/index.html
@@ -39,15 +39,19 @@
       <h2>Featured Items</h2>
       <div class="item">
         <img src="item11.jpeg" alt="Item 1">
-        <h3>Item 1</h3>
+        <h3>Oversized Poloneck t-shirt</h3>
         <p>Whether lounging at home, running errands, or meeting friends for brunch, the oversized T-shirt effortlessly combines comfort and style, making it a must-have staple in any wardrobe.</p>
-        <button>Add to Cart</button>
+        <button class="addToCartBtn" onclick="addToCart('Item 1', '$10.99')">Add to Cart</button>
+        <span class="addedToCartMsg" style="display:none;">+1 added to cart</span>
+</div>
+
       </div>
       <div class="item">
         <img src="item.jpg.jpeg" alt="Item 2">
-        <h3>Item 2</h3>
+        <h3>Varsity</h3>
         <p>At the thrift store, this black varsity jacket offers not only an opportunity to embrace vintage fashion but also a chance to discover a piece of clothing with character and history</p>
-        <button>Add to Cart</button>
+        <button class="addToCartBtn" onclick="addToCart('Item 2', '$19.99')">Add to Cart</button>
+        <span class="addedToCartMsg" style="display:none;">+1 added to cart</span>
       </div>
       <!-- Add more items here -->
     </div>
@@ -93,7 +97,15 @@
       </div>
     </div>
   </footer>
-
+  <!-- HTML for the modal dialog -->
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p id="dialog-message"></p>
+    <button id="confirmBtn">OK</button>
+    <button id="cancelBtn">Cancel</button>
+  </div>
+</div>
   <script src="script.js"></script>
   
   </body>
